--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,39 +1,47 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+<div class = "container">
+  <div class = "row mt-5">
+    <div class = "offset-md-1">
+      <h1 class = "text-success">新規登録画面</h1>
+    </div>
   </div>
+  <div class = "row mt-5">
+    <div class = "offset-md-2">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        <div class="field mb-3">
+          <%= f.label :ニックネーム, class: 'text-success' %><br />
+          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+        </div>
+
+        <div class="field mb-3">
+          <%= f.label :メールアドレス, class: 'text-success' %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+        </div>
+
+        <div class="field mb-3">
+          <%= f.label :電話番号, class: 'text-success' %><br />
+          <%= f.telephone_field :telephone, autofocus: true, autocomplete: "telephone" %>
+        </div>
+
+        <div class="field mb-3">
+          <%= f.label :パスワード, class: 'text-success' %>
+          <% if @minimum_password_length %>
+          <em class = "text-success">(<%= @minimum_password_length %> 文字以上)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+        </div>
+
+        <div class="field mb-3">
+          <%= f.label :パスワード確認, class: 'text-success' %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+        </div>
+
+        <div class="actions mb-3"><br />
+          <%= f.submit "Sign up", class: 'btn btn-outline-success' %>
+        </div>
+      <% end %>
+      <%= render "users/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :telephone %><br />
-    <%= f.telephone_field :telephone, autofocus: true, autocomplete: "telephone" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
