--- a/app/views/users/users/follows.html.erb
+++ b/app/views/users/users/follows.html.erb
@@ -1,10 +1,18 @@
-<% @users.each do |user| %>
-<%= link_to user_path(user.id) do %>
-<% if user.image? %>
-  <%= image_tag user.image.url, :size => '100x100' %>
-<% else %>
-  <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
-<% end %>
-<%= user.name %>
-<% end %>
-<% end %>
+<div class = "container">
+  <div class = "row">
+  	<div class = "offset-md-3">
+	  <% @users.each do |user| %>
+	    <div class = "row mb-3">
+          <%= link_to user_path(user.id) do %>
+            <% if user.image? %>
+              <%= image_tag user.image.url, :size => '100x100' %>
+            <% else %>
+              <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+            <% end %>
+            <%= user.name %>
+          <% end %>
+	    </div>
+      <% end %>
+  	</div>
+  </div>
+</div>
