--- a/app/views/admins/posts/index.html.erb
+++ b/app/views/admins/posts/index.html.erb
@@ -1,23 +1,129 @@
-<% @posts.each do |post| %>
-  <%= link_to(admins_post_path(post.id)) do %>
-    <% if post.user.image? %>
-      <%= image_tag post.user.image.url, :size => '100x100' %>
-    <% else %>
-      <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
-    <% end %>
-    <%= post.user.name %>
-    <%= post.value %>
-    <%= post.body %>
-    コメント数：<%= post.post_comments.count %>
-    <%= post.favorites.count %>
-  <% end %>
-  <div class="dropdown">
-    <!-- 切替ボタンの設定 -->
-    <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-    <!-- ドロップメニューの設定 -->
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
-        <%= link_to "報告取消", admins_cancel_report_path(post.id), method: :patch, "data-confirm" => "報告を取り消しますか？" %>
+
+<div class = "container">
+  <div class = "row mt-3">
+    <div class = "col-md-12">
+      <% @posts.each do |post| %>
+        <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
+          <% if post.value == 0 %>
+            <div class = "row">
+              <div class = "col-md-2">
+                <% if post.user.image? %>
+                  <%= image_tag post.user.image.url, :size => '50x50' %>
+                <% else %>
+                  <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                <% end %>
+              </div>
+              <div class = "col-md-5">
+                <%= post.user.name %>
+              </div>
+            </div>
+            <%= link_to admins_post_path(post.id) do %>
+              <div class = "row">
+                <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                  <div class = "col-md-12 mb-3">
+                    <%= post.title %>
+                  </div>
+                </div>
+              </div>
+              <div class = "offset-md-1 col-md-10">
+                <div class = "row">
+                  <div class = "col-md-2">
+                    返信数：<%= post.post_comments.count %>
+                  </div>
+                  <div class = "offset-md-8">
+                    いいね数：<%= post.favorites.count %>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          <% else %>
+            <% if (current_user == post.user) || (current_user.orders.exists?(post_number: post.id)) %>
+              <div class = "row">
+                <div class = "col-md-2">
+                  <% if post.user.image? %>
+                    <%= image_tag post.user.image.url, :size => '50x50' %>
+                  <% else %>
+                    <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                  <% end %>
+                </div>
+                <div class = "col-md-5">
+                  <%= post.user.name %>
+                </div>
+                <div class = "col-md-5">
+                  価値：<%= post.value %>
+                </div>
+              </div>
+              <%= link_to admins_post_path(post.id) do %>
+                <div class = "row">
+                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                    <div class = "col-md-12 mb-3">
+                      <%= post.title %>
+                    </div>
+                  </div>
+                </div>
+                <div class = "offset-md-1 col-md-10">
+                  <div class = "row">
+                    <div class = "col-md-2">
+                      返信数：<%= post.post_comments.count %>
+                    </div>
+                    <div class = "offset-md-8">
+                      いいね数：<%= post.favorites.count %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% else %>
+              <div class = "row">
+                <div class = "col-md-2">
+                  <% if post.user.image? %>
+                    <%= image_tag post.user.image.url, :size => '50x50' %>
+                  <% else %>
+                    <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                  <% end %>
+                </div>
+                <div class = "col-md-5">
+                  <%= post.user.name %>
+                </div>
+                <div class = "col-md-5">
+                  価値：<%= post.value %>
+                </div>
+              </div>
+              <%= link_to admins_post_path(post.id) do %>
+                <div class = "row">
+                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
+                    <div class = "col-md-10 mb-3">
+                      <%= post.title %>
+                    </div>
+                  </div>
+                </div>
+                <div class = "offset-md-1 col-md-10">
+                  <div class = "row">
+                    <div class = "col-md-2">
+                      返信数：<%= post.post_comments.count %>
+                    </div>
+                    <div class = "offset-md-8">
+                      いいね数：<%= post.favorites.count %>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
+          <% end %>
+          <div class = "row">
+            <div class = "offset-md-11">
+              <div class="dropdown">
+                <!-- 切替ボタンの設定 -->
+                <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                <!-- ドロップメニューの設定 -->
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
+                  <%= link_to "報告取消", admins_cancel_report_path(post.id), method: :patch, "data-confirm" => "報告を取り消しますか？" %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-<% end %>
+</div>
