--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,21 +37,21 @@
             </div>
           </div>
         </div>
-        
         <div class = "col-md-5">
           <% if user_signed_in? %>
             <%= link_to posts_path do %>
-              <%= image_tag "/assets/logo2.jpg", size: '100x60' %>
+              <%= image_tag "/assets/logo2.jpg", size: '200x60' %>
             <% end %>
           <% else %>
             <%= link_to root_path do %>
-              <%= image_tag "/assets/logo2.jpg", size: '100x60' %>
+              <%= image_tag "/assets/logo2.jpg", size: '200x60' %>
             <% end %>
           <% end %>
         </div>
         <div class = "col-md-2">
-          <%= link_to 'admin', admins_root_path %>
-          <%= link_to "✉️", new_post_path %>
+          <%= link_to new_post_path do %>
+            <h1>✉️</h1>
+          <% end %>
         </div>
       </div>
     </header><!-- /header -->
