--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
   <div class = "row my-5">
     <div class = "mx-auto">
-      <%= image_tag "/assets/logo3.jpg", size: '500x300' %>
+      <%= image_tag asset_path("/assets/logo3.jpg"), size: '500x300' %>
 	</div>
   </div>
   <div class = "row my-5">
