--- a/app/views/users/posts/index.html.erb
+++ b/app/views/users/posts/index.html.erb
@@ -8,9 +8,9 @@
               <div class = "row">
                 <div class = "col-md-2">
                   <% if post.user.image? %>
-                    <%= image_tag post.user.image.url, :size => '50x50' %>
+                    <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                   <% else %>
-                    <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                    <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
                   <% end %>
                 </div>
                 <div class = "col-md-5">
@@ -53,9 +53,9 @@
                 <div class = "row">
                   <div class = "col-md-2">
                     <% if post.user.image? %>
-                      <%= image_tag post.user.image.url, :size => '50x50' %>
+                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                     <% else %>
-                      <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                      <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
                     <% end %>
                   </div>
                   <div class = "col-md-5">
@@ -100,9 +100,9 @@
                 <div class = "row">
                   <div class = "col-md-2">
                     <% if post.user.image? %>
-                      <%= image_tag post.user.image.url, :size => '50x50' %>
+                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                     <% else %>
-                      <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                      <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
                     <% end %>
                   </div>
                   <div class = "col-md-5">
