--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -6,9 +6,9 @@
           <div class = "row">
             <div class = "col-md-2">
               <% if @post.user.image? %>
-                <%= image_tag @post.user.image.url, :size => '50x50' %>
+                <%= image_tag asset_path(@post.user.image.url), :size => '50x50' %>
               <% else %>
-                <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
               <% end %>
             </div>
             <div class = "col-md-5">
@@ -86,9 +86,9 @@
             <div class = "row">
               <div class = "col-md-2">
                 <% if post_comment.user.image? %>
-                  <%= image_tag post_comment.user.image.url, :size => '50x50' %>
+                  <%= image_tag asset_path(post_comment.user.image.url), :size => '50x50' %>
                 <% else %>
-                  <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                  <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
                 <% end %>
               </div>
               <div class = "col-md-5">
