--- a/app/views/users/searches/search.html.erb
+++ b/app/views/users/searches/search.html.erb
@@ -4,9 +4,9 @@
       <% @users.each do |user| %>
         <%= link_to user_path(user) do %>
           <% if user.image? %>
-            <%= image_tag user.image.url, :size => '100x100' %>
+            <%= image_tag asset_path(user.image.url), :size => '100x100' %>
           <% else %>
-            <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+            <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
           <% end %>
           <%= user.name %>
         <% end %>
@@ -21,9 +21,9 @@
             <div class = "row">
               <div class = "col-md-2">
                 <% if post.user.image? %>
-                  <%= image_tag post.user.image.url, :size => '50x50' %>
+                  <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                 <% else %>
-                  <%= image_tag "/assets/no_image.jpg", :size => '50x50' %>
+                  <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
                 <% end %>
               </div>
               <div class = "col-md-5">
