[update] 本番環境での写真表示の修正２

--- a/app/views/users/users/profile_edit.html.erb
+++ b/app/views/users/users/profile_edit.html.erb
@@ -24,7 +24,7 @@
             <% if @user.image? %>
               <%= image_tag asset_path(@user.image.url), :size => '100x100' %>
             <% else %>
-              <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
+              <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
             <% end %>
             <button type="button" class="btn btn-outline-success rounded-pill">
               <%= f.file_field :image, accept: 'image/jpeg,image/gif,image/png' %>
