--- a/app/views/admins/posts/comment_index.html.erb
+++ b/app/views/admins/posts/comment_index.html.erb
@@ -9,7 +9,7 @@
               <% if post_comment.user.image? %>
                 <%= image_tag asset_path(post_comment.user.image.url), :size => '50x50' %>
               <% else %>
-                <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
               <% end %>
             </div>
             <div class = "col-md-5">
