--- a/app/views/users/orders/confilm.html.erb
+++ b/app/views/users/orders/confilm.html.erb
@@ -12,7 +12,7 @@
 			<% if @post.user.image? %>
 		  	  <%= image_tag asset_path(@post.user.image.url), :size => '50x50' %>
 			<% else %>
-	 	 	  <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+	 	 	  <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
 			<% end %>
 		  </div>
 		  <div class = "col-md-5">
