--- a/app/views/users/orders/index.html.erb
+++ b/app/views/users/orders/index.html.erb
@@ -24,7 +24,7 @@
 			    <% if order.image? %>
 			      <%= image_tag asset_path(order.image), :size => '50x50' %>
 			    <% else %>
-			      <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+			      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
 			    <% end %>
 			  </div>
 			  <div class = "col-md-5">
