--- a/app/views/users/searches/search.html.erb
+++ b/app/views/users/searches/search.html.erb
@@ -6,7 +6,7 @@
           <% if user.image? %>
             <%= image_tag asset_path(user.image.url), :size => '100x100' %>
           <% else %>
-            <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
+            <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
           <% end %>
           <%= user.name %>
         <% end %>
@@ -23,7 +23,7 @@
                 <% if post.user.image? %>
                   <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                 <% else %>
-                  <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                  <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                 <% end %>
               </div>
               <div class = "col-md-5">
