--- a/app/views/users/users/followers.html.erb
+++ b/app/views/users/users/followers.html.erb
@@ -6,7 +6,7 @@
 	      <% if user.user.image? %>
 	        <%= image_tag asset_path(user.user.image.url), :size => '100x100' %>
 	      <% else %>
-	        <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
+	        <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
 	      <% end %>
 	      <%= user.user.name %>
 	    <% end %>
