--- a/app/views/users/users/follows.html.erb
+++ b/app/views/users/users/follows.html.erb
@@ -7,7 +7,7 @@
             <% if user.image? %>
               <%= image_tag asset_path(user.image.url), :size => '100x100' %>
             <% else %>
-              <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
+              <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
             <% end %>
             <%= user.name %>
           <% end %>
