--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -7,7 +7,7 @@
             <% if @user.image? %>
               <%= image_tag asset_path(@user.image.url), :size => '100x100' %>
             <% else %>
-              <%= image_tag asset_path("/assets/no_image.jpg"), :size => '100x100' %>
+              <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
             <% end %>
           </div>
           <div class = "col-md-6 pt-4">
@@ -73,7 +73,7 @@
                       <% if post.user.image? %>
                         <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                       <% else %>
-                        <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                        <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                       <% end %>
                     </div>
                     <div class = "col-md-5">
@@ -118,7 +118,7 @@
                         <% if post.user.image? %>
                           <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                         <% else %>
-                          <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                          <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                         <% end %>
                       </div>
                       <div class = "col-md-5">
@@ -165,7 +165,7 @@
                         <% if post.user.image? %>
                           <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
                         <% else %>
-                          <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                          <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                         <% end %>
                       </div>
                       <div class = "col-md-5">
@@ -238,7 +238,7 @@
                   <% if post_comment.user.image? %>
                     <%= image_tag asset_path(post_comment.user.image.url), :size => '50x50' %>
                   <% else %>
-                    <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                    <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                   <% end %>
                 </div>
                 <div class = "col-md-5">
@@ -286,7 +286,7 @@
                       <% if favorite_post.post.user.image? %>
                         <%= image_tag asset_path(favorite_post.post.user.image.url), :size => '50x50' %>
                       <% else %>
-                        <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                        <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                       <% end %>
                     </div>
                     <div class = "col-md-5">
@@ -331,7 +331,7 @@
                         <% if favorite_post.post.user.image? %>
                           <%= image_tag asset_path(favorite_post.post.user.image.url), :size => '50x50' %>
                         <% else %>
-                          <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                          <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                         <% end %>
                       </div>
                       <div class = "col-md-5">
@@ -378,7 +378,7 @@
                         <% if favorite_post.post.user.image? %>
                           <%= image_tag asset_path(favorite_post.post.user.image.url), :size => '50x50' %>
                         <% else %>
-                          <%= image_tag asset_path("/assets/no_image.jpg"), :size => '50x50' %>
+                          <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
                         <% end %>
                       </div>
                       <div class = "col-md-5">
