--- a/app/views/users/homes/top.html.erb
+++ b/app/views/users/homes/top.html.erb
@@ -7,7 +7,7 @@
   <div class = "row my-5">
   	<div class = "mx-auto">
 	  <%= link_to new_user_session_path do %>
-	    <h1 class="btn btn-primary rounded-pill">スタート</h1>
+	    <h1 class="btn btn-primary rounded-pill">スタートた</h1>
 	  <% end %>
   	</div>
   </div>
