--- a/app/views/users/searches/search.html.erb
+++ b/app/views/users/searches/search.html.erb
@@ -1,183 +1,12 @@
 <div class = "container">
   <div class = "row pt-5">
     <div class = "col-md-12">
-      <% @users.each do |user| %>
-        <%= link_to user_path(user) do %>
-          <% if user.image? %>
-            <%= image_tag asset_path(user.image.url), :size => '100x100' %>
-          <% else %>
-            <%= image_tag asset_path('no_image.jpg'), :size => '100x100' %>
-          <% end %>
-          <%= user.name %>
-        <% end %>
-      <% end %>
+      <%= render 'template/searches_users', users: @users %>
     </div>
   </div>
   <div class = "row mt-5">
     <div class = "col-md-12">
-      <% @posts.each do |post| %>
-        <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
-          <% if post.value == 0 %>
-            <%= link_to user_path(post.user), class: 'w-100' do %>
-              <div class = "row">
-                <div class = "col-md-2">
-                  <% if post.user.image? %>
-                    <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
-                  <% else %>
-                    <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                  <% end %>
-                </div>
-                <div class = "col-md-5">
-                  <%= post.user.name %>
-                </div>
-              </div>
-            <% end %>
-            <%= link_to post_path(post.id) do %>
-              <div class = "row">
-                <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-                  <div class = "col-md-12 mb-3">
-                    <%= post.title %>
-                  </div>
-                </div>
-              </div>
-              <div class = "offset-md-1 col-md-10">
-                <div class = "row">
-                  <div class = "col-md-12">
-                    返信数：<%= post.post_comments.count %>
-                  </div>
-                  <div class = "offset-md-8">
-                    <% if post.favorited_by?(current_user) %>
-                      <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-                        <span aria-hidden="true"></span>
-                        いいね数：<%= post.favorites.count %>
-                      <% end %>
-                    <% else %>
-                      <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-                        <span aria-hidden="true"></span>
-                        いいね数：<%= post.favorites.count %>
-                      <% end %>
-                    <% end %>
-                  </div>
-                </div>
-              </div>
-            <% end %>
-          <% else %>
-            <% if (current_user == post.user) || (current_user.orders.exists?(post_number: post.id)) %>
-              <%= link_to user_path(post.user), class: 'w-100' do %>
-                <div class = "row">
-                  <div class = "col-md-2">
-                    <% if post.user.image? %>
-                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
-                    <% else %>
-                      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                    <% end %>
-                  </div>
-                  <div class = "col-md-5">
-                    <%= post.user.name %>
-                  </div>
-                  <div class = "col-md-5">
-                    価値：<%= post.value %>
-                  </div>
-                </div>
-              <% end %>
-              <%= link_to post_path(post.id) do %>
-                <div class = "row">
-                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-                    <div class = "col-md-12 mb-3">
-                      <%= post.title %>
-                    </div>
-                  </div>
-                </div>
-                <div class = "offset-md-1 col-md-10">
-                  <div class = "row">
-                    <div class = "col-md-12">
-                      返信数：<%= post.post_comments.count %>
-                    </div>
-                    <div class = "offset-md-8">
-                      <% if post.favorited_by?(current_user) %>
-                        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-                          <span aria-hidden="true"></span>
-                          いいね数：<%= post.favorites.count %>
-                        <% end %>
-                      <% else %>
-                        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-                          <span aria-hidden="true"></span>
-                          いいね数：<%= post.favorites.count %>
-                        <% end %>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
-              <% end %>
-            <% else %>
-              <%= link_to user_path(post.user), class: 'w-100' do %>
-                <div class = "row">
-                  <div class = "col-md-2">
-                    <% if post.user.image? %>
-                      <%= image_tag asset_path(post.user.image.url), :size => '50x50' %>
-                    <% else %>
-                      <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                    <% end %>
-                  </div>
-                  <div class = "col-md-5">
-                    <%= post.user.name %>
-                  </div>
-                  <div class = "col-md-5">
-                    価値：<%= post.value %>
-                  </div>
-                </div>
-              <% end %>
-              <%= link_to confilm_path(post.id) do %>
-                <div class = "row">
-                  <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-                    <div class = "col-md-10 mb-3">
-                      <%= post.title %>
-                    </div>
-                    購入すると本文が見れるようになります
-                  </div>
-                </div>
-                <div class = "offset-md-1 col-md-10">
-                  <div class = "row">
-                    <div class = "col-md-12">
-                      返信数：<%= post.post_comments.count %>
-                    </div>
-                    <div class = "offset-md-8">
-                      <% if post.favorited_by?(current_user) %>
-                        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
-                          <span aria-hidden="true"></span>
-                          いいね数：<%= post.favorites.count %>
-                        <% end %>
-                      <% else %>
-                        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
-                          <span aria-hidden="true"></span>
-                          いいね数：<%= post.favorites.count %>
-                        <% end %>
-                      <% end %>
-                    </div>
-                  </div>
-                </div>
-              <% end %>
-            <% end %>
-          <% end %>
-          <div class = "row">
-            <div class = "offset-md-11">
-              <div class="dropdown">
-                <!-- 切替ボタンの設定 -->
-                <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                <!-- ドロップメニューの設定 -->
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <% if current_user.id == post.user.id %>
-                    <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
-                    <%= link_to "報告", report_path(post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                  <% else %>
-                    <%= link_to "報告", report_path(post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render 'template/seaches_posts', posts: @posts %>
     </div>
   </div>
 </div>
