--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -2,71 +2,7 @@
   <div class = "row mt-5">
     <div class = "col-md-12">
       <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
-        <%= link_to user_path(@post.user.id), class: 'w-100' do %>
-          <div class = "row">
-            <div class = "col-md-2">
-              <% if @post.user.image? %>
-                <%= image_tag asset_path(@post.user.image.url), :size => '50x50' %>
-              <% else %>
-                <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-              <% end %>
-            </div>
-            <div class = "col-md-5">
-              <%= @post.user.name %>
-            </div>
-          </div>
-        <% end %>
-        <div class = "row">
-          <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-            <div class = "col-md-12 mb-3">
-              <%= @post.title %>
-            </div>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "offset-md-1 col-md-10" style = "border-bottom:1px solid limegreen;">
-            <div class = "col-md-12 mb-3">
-              <%= @post.body %>
-            </div>
-          </div>
-        </div>
-        <div class = "offset-md-1 col-md-10">
-          <div class = "row">
-            <div class = "col-md-2">
-              返信数：<%= @post.post_comments.count %>
-            </div>
-            <div class = "offset-md-8">
-              <% if @post.favorited_by?(current_user) %>
-                <%= link_to post_favorites_path(@post), method: :delete, remote: true do %>
-                  <span aria-hidden="true"></span>
-                  いいね数：<%= @post.favorites.count %>
-                <% end %>
-              <% else %>
-                <%= link_to post_favorites_path(@post), method: :post, remote: true do %>
-                  <span aria-hidden="true"></span>
-                  いいね数：<%= @post.favorites.count %>
-                <% end %>
-              <% end %>
-            </div>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "offset-md-11">
-            <div class="dropdown">
-              <!-- 切替ボタンの設定 -->
-              <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-              <!-- ドロップメニューの設定 -->
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <% if current_user == @post.user %>
-                  <%= link_to "削除", post_path(@post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
-                  <%= link_to "報告", report_path(@post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                <% else %>
-                  <%= link_to "報告", report_path(@post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
+        <%= render 'template/posts_show', post: @post %>
       </div>
     </div>
   </div>
@@ -80,48 +16,7 @@
   </div>
   <div class = "row mt-5">
     <div class = "col-md-12">
-      <% @post.post_comments.each do |post_comment| %>
-        <div class = "posts w-100 mb-1" style ="background-color:#cbffd3;border:1px solid limegreen;">
-          <%= link_to user_path(post_comment.user.id), class: 'w-100' do %>
-            <div class = "row">
-              <div class = "col-md-2">
-                <% if post_comment.user.image? %>
-                  <%= image_tag asset_path(post_comment.user.image.url), :size => '50x50' %>
-                <% else %>
-                  <%= image_tag asset_path('no_image.jpg'), :size => '50x50' %>
-                <% end %>
-              </div>
-              <div class = "col-md-5">
-                <%= post_comment.user.name %>
-              </div>
-            </div>
-          <% end %>
-          <div class = "row">
-            <div class = "offset-md-1 col-md-10" style = "border-top:1px solid limegreen; border-bottom:1px solid limegreen;">
-              <div class = "col-md-12 mb-3">
-                <%= post_comment.comment %>
-              </div>
-            </div>
-          </div>
-          <div class = "row">
-            <div class = "offset-md-11">
-              <div class="dropdown">
-                <!-- 切替ボタンの設定 -->
-                <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                <!-- ドロップメニューの設定 -->
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <% if current_user == post_comment.user %>
-                    <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, "data-confirm" => "本当に消しますか？" %>
-                    <%= link_to "報告", post_comment_report_path(post_comment.post, post_comment), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                  <% else %>
-                    <%= link_to "報告", post_comment_report_path(post_comment.post, post_comment), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                  <% end %>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+      <%= render 'template/comment_posts_show', post: @post %>
     </div>
   </div>
 </div>
