[Update] コードの修正３

--- a/app/views/users/orders/index.html.erb
+++ b/app/views/users/orders/index.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class = "row mt-5">
   	<div class = "col-md-12">
-	  	<%= render 'template/orders_index', orders: @orders %>
+	  	<%= render 'users/template/orders_index', orders: @orders %>
     </div>
   </div>
 </div>
