--- a/app/views/users/searches/search.html.erb
+++ b/app/views/users/searches/search.html.erb
@@ -1,12 +1,12 @@
 <div class = "container">
   <div class = "row pt-5">
     <div class = "col-md-12">
-      <%= render 'template/searches_users', users: @users %>
+      <%= render 'users/template/searches_users', users: @users %>
     </div>
   </div>
   <div class = "row mt-5">
     <div class = "col-md-12">
-      <%= render 'template/seaches_posts', posts: @posts %>
+      <%= render 'users/template/searches_posts', posts: @posts %>
     </div>
   </div>
 </div>
