--- a/app/views/admins/posts/index.html.erb
+++ b/app/views/admins/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
 	<div class = "row mt-3">
 		<div class = "col-md-12">
-			<%= render 'template/posts_index', posts: @posts %>
+			<%= render 'admins/template/posts_index', posts: @posts %>
 		</div>
 	</div>
 </div>
