--- a/app/views/users/shared/_dropdown.html.erb
+++ b/app/views/users/shared/_dropdown.html.erb
@@ -3,7 +3,7 @@
                 <button class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
                 <!-- ドロップメニューの設定 -->
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <% if current_user.id == post.user.id %>
+                  <% if current_user == post.user %>
                     <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
                     <%= link_to "報告", report_path(post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
                   <% else %>
