--- a/app/views/users/template/_posts_show.html.erb
+++ b/app/views/users/template/_posts_show.html.erb
@@ -48,18 +48,6 @@
         </div>
         <div class = "row">
           <div class = "offset-md-11">
-            <div class="dropdown">
-              <!-- 切替ボタンの設定 -->
-              <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-              <!-- ドロップメニューの設定 -->
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <% if current_user == post.user %>
-                  <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
-                  <%= link_to "報告", report_path(post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                <% else %>
-                  <%= link_to "報告", report_path(post.id), method: :patch, "data-confirm" => "本当に報告しますか？" %>
-                <% end %>
-              </div>
-            </div>
+            <%= render 'users/shared/dropdown', post: post %>
           </div>
         </div>
